--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "fyle-frontend-challenge",
   "version": "0.0.0",
   "scripts": {
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "node dist/fyle-frontend-challenge/server/main.js",
+    "build": "ng build && ng run fyle-frontend-challenge:server",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "dev:ssr": "ng run fyle-frontend-challenge:serve-ssr",
